# dmp-cli

./: .buildinfo  .bumpversion.cfg  .gitignore  MANIFEST.in  Pipfile  README.rst  dmp_cli.html  fabfile.py  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
_modules/: index.html
_modules/dmp_cli/: cli.html
_sources/: dmp_cli.rst.txt  index.rst.txt  modules.rst.txt
dmp_cli/: __init__.py  cli.py
docs/: .gitignore  Makefile  conf.py  make.bat
tests/: __init__.py  test_dmp_cli.py
