[metadata]
name = dmp-cli
version = 0.1.4
description = A command-line-interface for django-mako-plus.
long_description = file: README.rst
author = Stephan Fitzpatrick
author_email = knowsuchagency@gmail.com
url = https://github.com/knowsuchagency/dmp-cli
license = MIT license
keywords = dmp-cli
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
test_suite = tests
setup_requires = pytest-runner

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest
